--- a/_locales/zh/KSB048-strings.json
+++ b/_locales/zh/KSB048-strings.json
@@ -4,10 +4,21 @@
 	"KSB048.MotorNum.M1B|block": "M1B",
 	"KSB048.MotorNum.M2A|block": "M2A",
 	"KSB048.MotorNum.M2B|block": "M2B",
+	"KSB048.MecanumState.Forward|block": "直線前進",
+	"KSB048.MecanumState.Back|block": "直線後退",
+	"KSB048.MecanumState.Left|block": "左側橫行",
+	"KSB048.MecanumState.Right|block": "右側橫行",
+	"KSB048.MecanumState.Forward_Left|block": "左前方前進",
+	"KSB048.MecanumState.Forward_Right|block": "右前方前進",
+	"KSB048.MecanumState.Back_Left|block": "左後方後退",
+	"KSB048.MecanumState.Back_Right|block": "右後方後退",
+	"KSB048.MecanumState.Clockwise|block": "順時針轉",
+	"KSB048.MecanumState.Counterclockwise|block": "逆時針轉",
+	"KSB048.MecanumState.Stop|block": "停止",
+	"KSB048.Mecanum_Car|block": "麥克納姆輪車種 %index|速度 %speed",
+	"KSB048.Motor_4WD|block": "馬達 %channel|速度 %speed",
 	"KSB048.LedNum.L_LED|block": "左邊",
 	"KSB048.LedNum.R_LED|block": "右邊",
-	"KSB048.Frq_Set|block": "舵機頻率 設定 %frqval",
-	"KSB048.DETECT_Frequency|block": "偵測舵機 %channel 頻率到IO %iopin",
 	"KSB048.Ultrasonic|block": "超音波測距(公分)",
 	"KSB048.RGB_LED|block": "全彩燈",
 	"KSB048.Servo|block": "舵機 %channel|角度 %degree",
